--- a/styloindexx.css
+++ b/styloindexx.css
@@ -28,7 +28,7 @@ body {
   color: black;
   padding: 10px 25px;
   text-decoration: none;
-  font-size: 20px;
+  font-size: 2.5vw;
   display: block;
   border-bottom: solid .1px #D3D3D3;
   font-family:sans-serif;
